test/compile-errors/mutate-parameter.crow
main nat64^(a string[])
	a := ()
	()
